<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	style="@style/perpendicularOrientation"
	tools:showIn="@layout/fragment_matrix"
	>

	<!-- @formatter:off -->
	<FrameLayout android:id="@+id/controls_comp_1" style="@style/matrix_component">
		<TextView android:id="@+id/controls_comp_rR"
		          style="@style/matrix_component_label"
		          android:text="@string/cf_matrix_rR" />
	</FrameLayout>

	<include android:id="@+id/controls_swap_12" layout="@layout/inc_times" />

	<FrameLayout android:id="@+id/controls_comp_2" style="@style/matrix_component">
		<TextView android:id="@+id/controls_comp_rG"
		          style="@style/matrix_component_label"
		          android:text="@string/cf_matrix_rG" />
	</FrameLayout>

	<include android:id="@+id/controls_swap_23" layout="@layout/inc_times" />

	<FrameLayout android:id="@+id/controls_comp_3" style="@style/matrix_component">
		<TextView android:id="@+id/controls_comp_rB"
		          style="@style/matrix_component_label"
		          android:text="@string/cf_matrix_rB" />
	</FrameLayout>

	<include android:id="@+id/controls_swap_34" layout="@layout/inc_times" />

	<FrameLayout android:id="@+id/controls_comp_4" style="@style/matrix_component">
		<TextView android:id="@+id/controls_comp_S"
		          style="@style/matrix_component_label"
		          android:text="@string/cf_matrix_S" />
	</FrameLayout>

	<include android:id="@+id/controls_swap_45" layout="@layout/inc_times" />

	<FrameLayout android:id="@+id/controls_comp_5" style="@style/matrix_component">
		<TextView android:id="@+id/controls_comp_sat"
		          style="@style/matrix_component_label"
		          android:text="@string/cf_matrix_sat" />
	</FrameLayout>
	<!-- @formatter:on -->

</LinearLayout>
